# statim-ai-server

./: .env.template  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt  requirements_models.txt
app/: download_models.py  run.py
app/controllers/: job_controller.py  model_controller.py
app/handlers/: sdxl_create_model.py  sdxl_job_executor.py
app/handlers/example_to_upper/: job_handler.py
app/handlers/example_to_upper2/: job_handler.py
app/handlers/palmyra_small/: create_model.py  job_handler.py
app/handlers/sdxl/: job_handler.py
app/manager/: __init__.py  job_manager.py
app/model/: base_job_handler.py  job.py  job_executor.py
app/repository/: __init__.py  job_repository.py
app/utils/: simple_logger.py  simple_queue.py  sqlitedb.py  utils.py
docs/: Insomnia_2024-04-07.json
example_handlers/: dependencies.txt
example_handlers/example_to_upper/: create_model.py
example_handlers/example_to_upper2/: job_handler.py
example_handlers/flan_t5_small/: create_model.py  job_handler.py
example_handlers/palmyra_small/: create_model.py  job_handler.py
example_handlers/sdxl/: create_model.py  job_handler.py
temp/flan_t5_small/: create_model.py  job_executor.py
tests/: test_models.py
