[tool.poetry]
name = "statim-ai-server"
version = "0.1.0"
description = ""
authors = ["pmav <pedrovam@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.2"
waitress = "^3.0.0"
flasgger = "^0.9.7"

[tool.poetry.dev-dependencies]

[tool.poetry.group.models.dependencies]
diffusers = "^0.27.2"
transformers = "^4.39.3"
accelerate = "^0.29.1"
sentencepiece = "^0.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
